# hahahahahahahahahaahahahahahahahahah

./: LICENSE  README.md  kontrolpunkti1.csv  main.py  noteikumi.txt  pyproject.toml
faili/: atbildes.csv  jautajumi.csv  kontrolpunkti.csv  pilsetas.csv  rezultāti_bonus.csv  rezultāti_laiks.csv
